# cop-thief

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
assets/: bonus_report.json
config/: config.yaml
deploy/: cloudrun.sh
docs/: ARCHITECTURE.md  MATCH_PEER.md  MATCH_PROTOCOL.md  PLAN.md  PRD.md  PROMPTS.md  REPORT_SCHEMA.md  SHARED_MATCH_RULES.md  TODO.md
src/cop_thief/: __init__.py  cli_commands.py  cli_match.py  config.py  main.py
src/cop_thief/agents/: __init__.py  base_agent.py  cop_agent.py  cop_policy.py  geometry.py  messages.py  strategies.py  thief_agent.py  thief_policy.py  tuning.py
src/cop_thief/game/: __init__.py  actions.py  board.py  engine.py  observation.py  scoring.py  setup.py  state.py
src/cop_thief/gui/: __init__.py  __main__.py  app.py  board_view.py  driver.py
src/cop_thief/mcp_servers/: __init__.py  asgi_auth.py  cloud_entry.py  cop_server.py  match_server.py  match_state.py  server_app.py  thief_server.py
src/cop_thief/orchestrator/: __init__.py  bonus_report.py  gmail_sender.py  llm_client.py  match_driver.py  match_driver_turns.py  mcp_series.py  peer_check.py  peer_client.py  peer_series.py  prompts.py  referee.py  results.py  (+2 more)
tests/: _helpers.py  test_agents.py  test_auth.py  test_balance.py  test_barriers.py  test_cli.py  test_config.py  test_docs.py  test_game_engine.py  test_geometry.py  test_gui_driver.py  test_mcp_series.py  test_movement.py  test_observation.py  test_orchestration.py  test_report_schema.py  test_runner.py  test_scoring.py  test_setup.py  test_strategies.py
(+3 files in other folders)
