[project]
name = "cop-thief"
version = "0.1.0"
description = "Dual AI agent Cop-vs-Thief chase game orchestrated over two MCP servers (HW6 — AI Agent Orchestration)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Amir Fadila" }, { name = "Eman Sarhan" }]

dependencies = [
    "pyyaml>=6.0.2",
    "fastmcp>=2.3.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "google-api-python-client>=2.140.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[project.scripts]
cop-thief = "cop_thief.main:main"
cop-thief-gui = "cop_thief.gui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cop_thief"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["cop_thief"]
omit = [
    "*/mcp_servers/*",
    "*/gmail_sender.py",
    "*/gui/app.py",
    "*/gui/board_view.py",
    "*/gui/__main__.py",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
